--- a/Makefile.xbmc
+++ b/Makefile.xbmc
@@ -161,7 +161,7 @@ xbmc-git/dezi.shairport: xbmc-git
 xbmc-git/dezi.tools: xbmc-git
 	$(xbmc-git-env); \
 	cd xbmc-git; \
-	sed -i 's/USE_BUILDROOT=1/USE_BUILDROOT=0/' tools/rbp/setup-sdk.sh; \
+	#sed -i 's/USE_BUILDROOT=1/USE_BUILDROOT=0/' tools/rbp/setup-sdk.sh; \
 	sed -i 's/TOOLCHAIN=\/usr\/local\/bcm-gcc/TOOLCHAIN=\/usr/' tools/rbp/setup-sdk.sh; \
 	sh tools/rbp/setup-sdk.sh; \
 	sed -i 's/cd $$(SOURCE); .\/bootstrap/#cd $$(SOURCE); .\/bootstrap/' tools/rbp/depends/xbmc/Makefile; \
