--- a/Makefile.xbmc
+++ b/Makefile.xbmc
@@ -70,7 +70,8 @@ xbmc-git:
 
 xbmc-git/dezi.patch: xbmc-git
 	cd xbmc-git; \
-	git apply --index ../../patches/xbmc.nfc.patch     || echo "Alread applied..."; \
+	git apply --index ../../patches/xbmc.nfc.patch       || echo "Alread applied..."; \
+	git apply --index ../../patches/xbmc.omxplayer.patch || echo "Alread applied..."; \
 	touch dezi.patch
 
 xbmc-git/dezi.taglib: xbmc-git
