--- a/Makefile.devel
+++ b/Makefile.devel
@@ -23,16 +23,21 @@ updatepacks-xberry:
 	sudo apt-get update
 	sudo apt-get install \
 	libboost1.49-dev \
-	libglew-dev:armhf \
+	libglew-dev:armhf \y
+	
 	libglewmx-dev:armhf \
 	libjbig-dev:armhf \
 	java-package \
+	libcurl4-gnutls-dev \
 
 updatepacks-xodroid:
 	sudo apt-get update
 	sudo apt-get install \
 	libglew1.7-dev:armhf \
 	libglewmx1.7-dev:armhf \
+	libjbig2dec0-dev:armhf \
+	java-common openjdk-7-jre-lib \
+	libcurl4-gnutls-dev \
 
 updatepacks-common:
 	sudo apt-get update
@@ -42,7 +47,7 @@ updatepacks-common:
 	libavahi-common-dev libavcodec-dev libavformat-dev libavutil-dev \
 	libbison-dev:armhf libbluray-dev:armhf libfuse-dev \
 	libbz2-dev:armhf libc-dev-bin libc6-dev:armhf libcaca-dev libcairo2-dev \
-	libcdio-dev libclalsadrv-dev libcrypto++-dev libcups2-dev libcurl3-gnutls-dev \
+	libcdio-dev libclalsadrv-dev libcrypto++-dev libcups2-dev \
 	libdbus-1-dev libdbus-glib-1-dev libdirectfb-dev libdrm-dev libegl1-mesa-dev \
 	libelf-dev libenca-dev libept-dev libevent-dev libexpat1-dev libflac-dev:armhf \
 	libfontconfig1-dev libfreetype6-dev libfribidi-dev libgconf2-dev libgcrypt11-dev \
@@ -77,5 +82,5 @@ updatepacks-common:
 	x11proto-xext-dev x11proto-xf86vidmode-dev x11proto-xinerama-dev xtrans-dev \
 	libnfs-dev libplist-dev avahi-daemon zlib1g-dev:armhf swig \
 	libafpclient-dev liblockdev1-dev autoconf automake libtool gcc udev openjdk-6-jre \
-	cmake g++ libudev-dev build-essential autoconf ccache \
+	cmake g++ libudev-dev build-essential autoconf ccache doxygen autopoint \
 	gawk gperf mesa-utils zip unzip curl checkinstall subversion
