--- a/Makefile.xbmc
+++ b/Makefile.xbmc
@@ -27,7 +27,7 @@ xbmc-pvr-addons-git:
 
 xbmc-pvr-addons-git/dezi.patch: xbmc-git
 	cd xbmc-pvr-addons-git; \
-	git apply --index ../../patches/xbmc-pvr-addons.timeout.patch || echo "Alread applied..."; \
+	git apply --index ../../patches/xbmc-pvr-addons.timeout.patch || echo "Already applied..."; \
 	touch dezi.patch
 
 xbmc-pvr-addons-git/dezi.done: xbmc-pvr-addons-git
@@ -70,8 +70,8 @@ xbmc-git:
 
 xbmc-git/dezi.patch: xbmc-git
 	cd xbmc-git; \
-	git apply --index ../../patches/xbmc.nfc.patch       || echo "Alread applied..."; \
-	git apply --index ../../patches/xbmc.omxplayer.patch || echo "Alread applied..."; \
+	git apply --index ../../patches/xbmc.nfc.patch       || echo "Already applied..."; \
+	git apply --index ../../patches/xbmc.omxplayer.patch || echo "Already applied..."; \
 	touch dezi.patch
 
 xbmc-git/dezi.taglib: xbmc-git
