--- a/Makefile.xodroid
+++ b/Makefile.xodroid
@@ -25,6 +25,7 @@ xbmc-doit: ./xbmc
 #
 
 xtarget=$(shell if [ -f /usr/local/bin/raspi-config ]; then echo -n "xberry"; else echo -n "xodroid"; fi)
+xplatform=$(shell if [ -f /usr/local/bin/raspi-config ]; then echo -n "raspberry-pi"; else echo -n "odroid-u2"; fi)
 
 #####################################################################
 #
@@ -143,7 +144,7 @@ xbmc-pvr-addons-git:
 
 xbmc-pvr-addons-git/dezi.patch: xbmc-pvr-addons-git
 	cd xbmc-pvr-addons-git; \
-	git apply --index ../../patches/xbmc-pvr-addons.timeout.patch || echo "Alread applied..."; \
+	git apply --index ../../patches/xbmc-pvr-addons.timeout.patch || echo "Already applied..."; \
 	touch dezi.patch
 
 xbmc-pvr-addons-git/dezi.done: xbmc-pvr-addons-git
@@ -188,8 +189,13 @@ xbmc-git:
 
 xbmc-git/dezi.patch: xbmc-git
 	cd xbmc-git; \
-	#git apply --index ../../patches/xbmc.nfc.patch       || echo "Alread applied..."; \
-	#git apply --index ../../patches/xbmc.omxplayer.patch || echo "Alread applied..."; \
+	git apply --index ../../patches/xbmc.nfc.patch       || echo "Already applied..."; \
+	#git apply --index ../../patches/xbmc.omxplayer.patch || echo "Already applied..."; \
+	#sed -i 's/cd $$(SOURCE); .\/bootstrap/#cd $$(SOURCE); .\/bootstrap/'   tools/depends/target/xbmc/Makefile; \
+	#sed -i 's/cd $$(SOURCE); $$(CONFIGURE)/#cd $$(SOURCE); $$(CONFIGURE)/' tools/depends/target/xbmc/Makefile; \
+	#sed -i 's/cd $$(SOURCE); .\/bootstrap/#cd $$(SOURCE); .\/bootstrap/'   tools/rbp/depends/xbmc/Makefile; \
+	#sed -i 's/cd $$(SOURCE); $$(CONFIGURE)/#cd $$(SOURCE); $$(CONFIGURE)/' tools/rbp/depends/xbmc/Makefile; \
+	sed -i 's/--prefix=$$(PREFIX)/--prefix=$$(PREFIX) $$(DEZICONFIGOPS)/' tools/depends/target/xbmc/Makefile; \
 	touch dezi.patch
 
 xbmc-git/dezi.taglib: xbmc-git
@@ -199,43 +205,33 @@ xbmc-git/dezi.taglib: xbmc-git
 	touch dezi.taglib
 
 xbmc-git/dezi.shairport: xbmc-git
-	cd xbmc-git; \
+	cd xbmc-git; \ 
 	make -C lib/libshairport; \
 	sudo make -C lib/libshairport install; \
 	touch dezi.shairport
 
-xbmc-git/dezi.odroid: xbmc-git
+xbmc-git/dezi.tools.odroid: xbmc-git
 	cd xbmc-git; \
 	sudo mkdir -p /opt/xbmc-depends; \
 	sudo chmod a+w  /opt/xbmc-depends; \
 	cd tools/depends; \
 	./bootstrap; \
 	./configure --prefix=/opt/xbmc-depends; || exit\
-	make || exit; \
+	make -j 4 || exit; \
 	cd ../..; \
-	make -C tools/depends/target/xbmc || exit; \
-	touch dezi.odroid
+	touch dezi.tools.odroid
 
-xbmc-git/dezi.raspi:	
+xbmc-git/dezi.tools.xberry:	xbmc-git
 	$(xbmc-git-env); \
 	cd xbmc-git; \
 	#sed -i 's/USE_BUILDROOT=1/USE_BUILDROOT=0/' tools/rbp/setup-sdk.sh; \
 	sed -i 's/TOOLCHAIN=\/usr\/local\/bcm-gcc/TOOLCHAIN=\/usr/' tools/rbp/setup-sdk.sh; \
 	sh tools/rbp/setup-sdk.sh; \
-	sed -i 's/cd $$(SOURCE); .\/bootstrap/#cd $$(SOURCE); .\/bootstrap/' tools/rbp/depends/xbmc/Makefile; \
-	sed -i 's/cd $$(SOURCE); $$(CONFIGURE)/#cd $$(SOURCE); $$(CONFIGURE)/' tools/rbp/depends/xbmc/Makefile; \
 	make -C tools/rbp/depends/xbmc/ || exit; \
-	touch dezi.raspi
-
-xbmc-git/dezi.configure: xbmc-git
-	$(xbmc-git-env); \
-	cd xbmc-git; \
-	./bootstrap || exit; \
-	./configure \
+	touch dezi.tools.xberry
+	
+xbmc-git-config-common= \
 		--prefix=/usr/local \
-		--build=arm-linux-gnueabihf \
-		--localstatedir=/var/lib \
-		--with-platform=raspberry-pi \
 		--disable-gl \
 		--enable-gles \
 		--disable-x11 \
@@ -266,21 +262,49 @@ xbmc-git/dezi.configure: xbmc-git
 		--disable-vdadecoder \
 		--disable-external-ffmpeg \
 		--enable-optical-drive \
+		--enable-libcec \
+		
+xbmc-git-config-xodroid= \
+		--with-platform=odroid-u2 \
+		--build=arm-linux-gnueabihf \
+		--localstatedir=/var/lib \
+		--disable-player=omxplayer \
+		
+xbmc-git-config-xberry= \
+		--with-platform=raspberry-pi \
+		--build=arm-linux-gnueabihf \
+		--localstatedir=/var/lib \
 		--enable-player=omxplayer \
-		|| exit; \
-	touch dezi.configure
 
-xbmc-git/dezi.make: xbmc-git
+xbmc-git/dezi.config.xberry: xbmc-git
 	cd xbmc-git; \
-	make; \
+	./bootstrap || exit; \
+	./configure \
+		$(xbmc-git-config-common) \
+		$(xbmc-git-config-xberry) \
+		|| exit; \
+	touch dezi.xberry
+	
+xbmc-git/dezi.config.xodroid: xbmc-git
+	cd xbmc-git; \
+	export DEZICONFIGOPS="$(xbmc-git-config-common) $(xbmc-git-config-xodroid)"; \
+	make -C tools/depends/target/xbmc || exit; \
+	touch dezi.config.xodroid
+
+xbmc-git/dezi.make.xberry: xbmc-git
+	cd xbmc-git; \
+	make -j 1; \
+	
+xbmc-git/dezi.make.xodroid: xbmc-git
+	cd xbmc-git; \
+	make -j 4; \
 
 xbmc-git-doit: \
+	xbmc-git \
 	xbmc-git/dezi.patch \
-	xbmc-git/dezi.taglib \
-	xbmc-git/dezi.shairport \
-	xbmc-git/dezi.tools \
-	xbmc-git/dezi.configure \
-	xbmc-git/dezi.make \
+	xbmc-git/dezi.tools.($xtarget) \
+	xbmc-git/dezi.config.($xtarget) \
+	xbmc-git/dezi.make.($xtarget) \
 
 ##################################################################
 #
