--- a/Makefile.devel
+++ b/Makefile.devel
@@ -23,36 +23,39 @@ updatepacks-xberry:
 	sudo apt-get update
 	sudo apt-get install \
 	libboost1.49-dev \
-	libglew-dev:armhf \y
-	
+	libgl1-mesa-dev \
+	libgles2-mesa-dev \
+	libglew-dev:armhf \
 	libglewmx-dev:armhf \
 	libjbig-dev:armhf \
 	java-package \
-	libcurl4-gnutls-dev \
 
 updatepacks-xodroid:
 	sudo apt-get update
 	sudo apt-get install \
-	libglew1.7-dev:armhf \
-	libglewmx1.7-dev:armhf \
 	libjbig2dec0-dev:armhf \
 	java-common openjdk-7-jre-lib \
-	libcurl4-gnutls-dev \
 
 updatepacks-common:
 	sudo apt-get update
 	sudo apt-get install \
+	libao-common libao-dev libao4 libavfilter-dev libbluetooth-dev \
+	libboost-date-time1.46-dev libboost-date-time1.46.1 libboost-dev \
+	libboost-serialization1.46-dev libboost-thread-dev libboost-thread1.46-dev \
+	libboost-thread1.46.1 libboost1.46-dev libcec-dev libcwiid-dev libcwiid1 \
+	libglew1.6 libglew1.6-dev \
+	libgstreamer-plugins-base0.10-dev libgstreamer0.10-dev libhal-storage-dev \
+	libmikmod2-dev libpostproc-dev libsdl-mixer1.2-dev libshairport-dev libswscale-dev \
 	autotools-dev comerr-dev dpkg-dev libalsaplayer-dev libapt-pkg-dev:armhf \
 	libasound2-dev libass-dev:armhf libatk1.0-dev libavahi-client-dev \
 	libavahi-common-dev libavcodec-dev libavformat-dev libavutil-dev \
 	libbison-dev:armhf libbluray-dev:armhf libfuse-dev \
 	libbz2-dev:armhf libc-dev-bin libc6-dev:armhf libcaca-dev libcairo2-dev \
 	libcdio-dev libclalsadrv-dev libcrypto++-dev libcups2-dev \
-	libdbus-1-dev libdbus-glib-1-dev libdirectfb-dev libdrm-dev libegl1-mesa-dev \
+	libdbus-1-dev libdbus-glib-1-dev libdirectfb-dev libdrm-dev \
 	libelf-dev libenca-dev libept-dev libevent-dev libexpat1-dev libflac-dev:armhf \
 	libfontconfig1-dev libfreetype6-dev libfribidi-dev libgconf2-dev libgcrypt11-dev \
-	libgdk-pixbuf2.0-dev libgl1-mesa-dev libgles2-mesa-dev \
-	libglib2.0-dev libglu1-mesa-dev libreadline-dev \
+	libgdk-pixbuf2.0-dev libcurl4-gnutls-dev libglib2.0-dev libglu1-mesa-dev libreadline-dev \
 	libgnome-keyring-dev libgnutls-dev libgpg-error-dev libgtk2.0-dev libhal-dev \
 	libhunspell-dev:armhf libice-dev:armhf libicu-dev libidn11-dev libiso9660-dev \
 	libjasper-dev libjconv-dev libjpeg8-dev:armhf libkrb5-dev \
@@ -83,4 +86,8 @@ updatepacks-common:
 	libnfs-dev libplist-dev avahi-daemon zlib1g-dev:armhf swig \
 	libafpclient-dev liblockdev1-dev autoconf automake libtool gcc udev openjdk-6-jre \
 	cmake g++ libudev-dev build-essential autoconf ccache doxygen autopoint \
-	gawk gperf mesa-utils zip unzip curl checkinstall subversion
+	gawk gperf mesa-utils zip unzip curl checkinstall subversion yasm \
+	cpufrequtils glmark2-es2
+	
+remove:
+	libgles2-mesa-dev libglew1.7-dev libglewmx1.7-dev libegl1-mesa-dev
