--- a/Makefile.devel
+++ b/Makefile.devel
@@ -10,7 +10,7 @@ all: updatepacks
 # Setup target architecture and host system.
 #
 
-xtarget=$(shell if [ -f /usr/local/bin/raspi-config ]; then echo -n "xberry"; else echo -n "xodroid"; fi)
+xtarget=$(shell if [ -f /usr/bin/raspi-config ]; then echo -n "xberry"; else echo -n "xodroid"; fi)
 
 ##################################################################
 #
