--- a/Makefile.local
+++ b/Makefile.local
@@ -157,7 +157,7 @@ libMXF = libMXF-src-$(libMXF_version)
 # Setup target architecture and host system.
 #
 
-xtarget=$(shell if [ -f /usr/local/bin/raspi-config ]; then echo -n "xberry"; else echo -n "xodroid"; fi)
+xtarget=$(shell if [ -f /usr/bin/raspi-config ]; then echo -n "xberry"; else echo -n "xodroid"; fi)
 
 ######################################################################
 #
