--- a/Makefile.devel
+++ b/Makefile.devel
@@ -24,6 +24,8 @@ updatepacks-xberry:
 	sudo apt-get install \
 	libboost1.49-dev \
 	libboost-thread1.49-dev \
+	libboost-serialization1.49-dev \
+	libboost-date-time1.49-dev \
 	libgl1-mesa-dev \
 	libgles2-mesa-dev \
 	libglew-dev:armhf \
@@ -31,7 +33,10 @@ updatepacks-xberry:
 	libjbig-dev:armhf \
 	libegl1-mesa-dev \
 	java-package \
-
+	libboost-dev \
+	libboost-thread-dev \
+	python-imaging \
+  
 updatepacks-xodroid:
 	sudo apt-get update
 	sudo apt-get install \
